# hw-crawling

./: pyproject.toml
crawling1/: scrapy.cfg
crawling1/crawling1/: items.py  middlewares.py  pipelines.py  settings.py
crawling1/crawling1/spiders/: brands_spider.py
hw2/crawling2/: book_api.py  pyproject.toml
hw2/crawling2/crawling2/: scrapy.cfg
hw2/crawling2/crawling2/crawling2/: items.py  middlewares.py  pipelines.py  settings.py
hw2/crawling2/crawling2/crawling2/spiders/: book_spider.py
