[project]
name = "crawling1"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem Babak",email = "dev@tararoutray.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
